--- a/public/build.properties
+++ b/public/build.properties
@@ -1,9 +1,6 @@
 {
   "projectName" : {
-    
-  }
-  
-  "allProject" : {
-    phpProject()
+      "package" : "com.apolbox.library",
+      "vendor" : "https://github.com/apolbox-project/apolbox/tree/vendor"
   }
 }
