--- a/public/build.properties
+++ b/public/build.properties
@@ -1,6 +1,11 @@
 {
-  "projectName" : {
+  "repositories" : {
       "package" : "com.apolbox.library",
       "vendor" : "https://github.com/apolbox-project/apolbox/tree/vendor"
-  }
+  },
+
+  "allProject" : [
+    "phpCenterProject"
+  ]
+  
 }
